objects/AW_AdviserPerformance__c.object
<CustomObject>
    <description>Various measures used to track activity by  advisers and sales leaders. The information is drawn from external systems as well as activity within Salesforce. The activity measures are collected weekly and aggregated to a parent object monthly.</description>
    <fields>
        <fullName>AW_AP_CompositeID__c</fullName>
        <description>Used as a foreign key to uniquely identify AP rows. 
Format: WW-YYYY-ConsultantCode</description>
        <externalId>true</externalId>
        <label>AP CompositeID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_AdviserTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Targeted set for the Adviser</description>
        <label>Activity Measure Total</label>
        <referenceTo>AW_AdviserTarget__c</referenceTo>
        <relationshipLabel>Activity Measure Actuals</relationshipLabel>
        <relationshipName>Adviser_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_AverageFAVP__c</fullName>
        <description>This is used to store average FAVP value</description>
        <label>AQC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ClientSatisfactionScore__c</fullName>
        <description>Year average rating based on clients surveys</description>
        <label>Client Satisfaction Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_ConsultantCode__c</fullName>
        <description>13 Digit Consultant Code</description>
        <externalId>true</externalId>
        <label>Consultant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_EndDate__c</fullName>
        <description>This indicates the end date of the activity measurement period</description>
        <formula>DATE(VALUE(AW_Year__c),1,1)- WEEKDAY(DATE(VALUE(AW_Year__c),1,1)) + AW_WeekNumber__c*7+1</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_FullYearNetRiskActivitiesTargetYTD__c</fullName>
        <description>Full Year&apos;s Net Risk Activities Target achieved</description>
        <label>% Full Year Net Risk Act. Target YTD</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_FullYearPCNetRetailActivityTargetYTD__c</fullName>
        <description>This holds Full Year Percentage Net Retail Activity Target YTD.</description>
        <label>% Full Year Net Retail Act. Target YTD</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_FullYearPCRiskNetPCRTargetYTD__c</fullName>
        <description>Year To Date Target set for the  full year PCR</description>
        <label>% Full Year Net Risk PCR Target YTD</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_FullYearPercentageNetPCRTargetYTD__c</fullName>
        <description>Full Year&apos;s Net Risk Activities Target achieved Year to Date as a percentage</description>
        <label>% Full Year Net PCR Target YTD</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_FullYearTargetPCR__c</fullName>
        <description>The  target PCRs to be achieved  for the year </description>
        <label>Full Year Target Net PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_FullYearTargetRetailActivities__c</fullName>
        <description>The target of the retail activities to be achieved  for the full year</description>
        <label>Full Year Target Net Retail Activities</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_FullYearTargetRiskActivities__c</fullName>
        <description>The target of the retail activities to be achieved  for the full year</description>
        <label>Full Year Target Net Risk Activities</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_FullYearTargetRiskPCR__c</fullName>
        <description>The target Risk PCRs for  has been set for the the full year  </description>
        <label>Full Year Target Net Risk PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_IsLatestActuals__c</fullName>
        <description>To check if this is the accurate and UpToDate data</description>
        <formula>Owner:User.AW_LastPerformanceAPIRunDate__c  =  AW_EndDate__c</formula>
        <label>Is Latest Actuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_LAPExpTenure__c</fullName>
        <description>This  is used to store LAP Experience Tenure</description>
        <label>Tenure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LastMELAPValidatingYTD__c</fullName>
        <description>Last MELAP  Validation</description>
        <label>Last ME LAP Validating YTD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LastYearsProductionClubStatus__c</fullName>
        <description>Status of Last Year&apos;s Production Club</description>
        <label>Production Club based on previous year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LeadConversionRate__c</fullName>
        <description>This is a calculated value where Lead Conversion Rate is a percent of lead converted of the total number of leads</description>
        <formula>AW_NumberOfLeadConverted__c /  (AW_NumberOfOpenLeads__c +  AW_NumberOfLeadConverted__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_NetPCRActualYTD__c</fullName>
        <description>Year To Date Net PCR value achieved</description>
        <label>Actual  Net PCR YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NetPCRRequiredForValidationYTD__c</fullName>
        <description>Net PCR value required for Validation Year To Date</description>
        <label>Net PCR Required for Validation YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NetPCR__c</fullName>
        <description>The Net PCR achieved for this week</description>
        <label>Net PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NetRetailActivitiesYTD__c</fullName>
        <description>Net Retail Activities achieved for the Year To Date</description>
        <label>Actual Net Retail Activities YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NetRiskActivitiesYTD__c</fullName>
        <description>Net Risk Activities achieved Year To Date</description>
        <label>Actual Net Risk Activities YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NumberOfLeadConverted__c</fullName>
        <description>Number of leads converted by adviser</description>
        <label>Number of Lead Converted</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NumberOfNewLeads__c</fullName>
        <description>This indicates the number of new leads for the month</description>
        <label>Number of New Leads</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NumberOfNewOpportunities__c</fullName>
        <description>Count of number of new opportunities</description>
        <label>Number of New Opportunities</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NumberOfOpenLeads__c</fullName>
        <description>This indicates the number of open leads for the month</description>
        <label>Number of Open Leads</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NumberOfOpportunitiesOpen__c</fullName>
        <description>Number of Opportunities Open for Adviser</description>
        <label>Number of Open Opportunities</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NumberOfOpportunitiesWon__c</fullName>
        <description>Number of Opportunities Won by Adviser</description>
        <label>Number of Opportunities Won</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_OnPBS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if adviser is on PBS</description>
        <label>On PBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_OpportunityWinRate__c</fullName>
        <description>Opportunity Win rate of Adviser shown as a percentage</description>
        <formula>AW_NumberOfOpportunitiesWon__c /(  AW_NumberOfOpportunitiesWon__c + AW_NumberOfOpportunitiesOpen__c )</formula>
        <label>Actual Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PercentageNetPCRTargetYTD__c</fullName>
        <description>Year To Date  Net PCRT Target Percentage achieved</description>
        <label>% Net PCR Target YTD</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PercentageRetailActivitiesTargetYTD__c</fullName>
        <description>The percentage of the retail activities target achieved up to this week</description>
        <label>% Net Retail Activities Target YTD</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PercentageRiskActivitiesTargetYTD__c</fullName>
        <description>The percentage of the retail activities target which has been achieved for the year up to this week</description>
        <label>% Net Risk Activities Target YTD</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PercentageRiskNetPCRTargetYTD__c</fullName>
        <description>Year To Date Net Risk PCR Percentage achieved</description>
        <label>% Net Risk PCR Target YTD</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_RD_StartDate__c</fullName>
        <description>This Field replicates the Start Date field( AW_StartDate__c). This was created in order to use this as a Dashboard filter( Converted from Date data type to Date/Time data type ).</description>
        <formula>DATETIMEVALUE( AW_StartDate__c )</formula>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_RetailActivities__c</fullName>
        <description>The retail activities for this week</description>
        <label>Net Retail Activity Count</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_RiskActivities__c</fullName>
        <description>The risk activities for this week</description>
        <label>Net Risk Activity Count</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_RiskNetPCRYTD__c</fullName>
        <description>Risk Net PCR achieved Year To Date</description>
        <label>Actual Net Risk PCR YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_RiskPCR__c</fullName>
        <description>The Risk PCRs achieved for the week</description>
        <label>Net Risk PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_StartDate__c</fullName>
        <description>Start Date of the data  record</description>
        <formula>IF
(
	DATE(VALUE(AW_Year__c),1,1)&gt; DATE(VALUE(AW_Year__c),1,1)- WEEKDAY(DATE(VALUE(AW_Year__c),1,1))+( AW_WeekNumber__c -1)*7+1,
	DATE(VALUE(AW_Year__c),1,1),
	DATE(VALUE(AW_Year__c),1,1)- WEEKDAY(DATE(VALUE(AW_Year__c),1,1))+( AW_WeekNumber__c -1)*7+2
)</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_TargetPCRYTD__c</fullName>
        <description>The portion of the Target year&apos;s PCRs which is expected to have been achieved up to this week</description>
        <label>Target Net PCR YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TargetRetailActivitiesYTD__c</fullName>
        <description>The target of the retail activities expected to have been achieved up to this week</description>
        <label>Target Net Retail Activities YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TargetRiskActivitiesYTD__c</fullName>
        <description>The target of the risk activities expected to have been achieved for the year up to this week</description>
        <label>Target Net Risk Activities YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TargetRiskPCRYTD__c</fullName>
        <description>The target Risk PCRs which is expected to have been achieved up to the week</description>
        <label>Target Net Risk PCR YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_UACFID__c</fullName>
        <description>owner will be assigned based on UACFID</description>
        <label>UACFID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_WeekNumber__c</fullName>
        <description>This field stores the week number.</description>
        <label>Week Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Year__c</fullName>
        <description>This is used to store year in which the calculation was done</description>
        <label>Year</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Activity Measure Actual</label>
    <listViews>
        <fullName>AW_AllAdviserPerformance</fullName>
        <columns>NAME</columns>
        <columns>AW_StartDate__c</columns>
        <columns>AW_EndDate__c</columns>
        <columns>AW_WeekNumber__c</columns>
        <columns>AW_NetPCR__c</columns>
        <columns>AW_NetPCRActualYTD__c</columns>
        <columns>AW_TargetPCRYTD__c</columns>
        <columns>AW_RiskPCR__c</columns>
        <columns>AW_RiskNetPCRYTD__c</columns>
        <columns>AW_TargetRiskPCRYTD__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Actuals</label>
    </listViews>
    <listViews>
        <fullName>AW_MyAdviserPerformance</fullName>
        <columns>NAME</columns>
        <columns>AW_StartDate__c</columns>
        <columns>AW_EndDate__c</columns>
        <columns>AW_WeekNumber__c</columns>
        <columns>AW_NetPCR__c</columns>
        <columns>AW_NetPCRActualYTD__c</columns>
        <columns>AW_TargetPCRYTD__c</columns>
        <columns>AW_RiskPCR__c</columns>
        <columns>AW_RiskNetPCRYTD__c</columns>
        <columns>AW_TargetRiskPCRYTD__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Actuals</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Measure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Measure Actuals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AW_OwnerWeekNumberYear_PreventEdit</fullName>
        <active>true</active>
        <description>This validation rule prevent update of Consultant Code, Owner, Year and Week Number fields as these field would impact the composite key external ID field.</description>
        <errorConditionFormula>AND
(
	NOT($Setup.AW_FeatureSwitches__c.AW_DisableAdviserPerformanceValidation__c), 
	NOT(ISNEW()),
	OR
	(
		ISCHANGED(AW_WeekNumber__c),
		ISCHANGED(AW_Year__c),
		ISCHANGED(OwnerId),
		ISCHANGED(AW_UACFID__c)
	)
)</errorConditionFormula>
        <errorMessage>You may not update system controlled fields once the record is created.</errorMessage>
    </validationRules>
</CustomObject>